# Gist_Magic

./: Cargo.toml  Readme.MD
src/: commands.rs  config.rs  lib.rs  main.rs  models.rs  requests.rs
