[package]
name = "gist_magic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.4" ,  features=["json"]}
serde = {version = "1.0.198" , features=["derive"]}
tokio = { version = "1.37.0" , features =["full"]}

[lib]
name = "gist_magic_lib"
path = "src/lib.rs"

[[bin]]
name = "gist_magic"
path = "src/main.rs"
